package wr1ttenyu.f1nal.study.designpattern.pattern23.adapter.classadapter;

public interface IVoltage5V {

    Integer getVoltage5V();
}
