@startuml

class Voltage220V
class Voltage220To5Adapter
interface IVoltage5V
class Voltage5VPhone

Voltage220To5Adapter --|> Voltage220V
Voltage220To5Adapter ..|> IVoltage5V

Voltage5VPhone ..> IVoltage5V

class Voltage220V {
    +getVoltage220V():Integer
}

class Voltage5VPhone {
    +charging(IVoltage5V voltage5V):void
}

interface IVoltage5V {
    +voltage5V():Integer
}

@enduml